...
        setImage(heartImage, for: .normal)
        configuration?.imagePadding = 10
        configuration?.cornerStyle = .medium
        tintColor = .tintColor
        semanticContentAttribute = .forceRightToLeft
        translatesAutoresizingMaskIntoConstraints = false
        accessibilityIdentifier = "continue-button"
    }
    
    required init?(coder: NSCoder) {
        fatalError()
    }
}
...
    var errorLabel: ErrorLabel = {
        let label = ErrorLabel()
        label.text = "You have to be minimum 18 years old!"
        return label
    }()
    
    var calendar: UIDatePicker = {
        let picker = UIDatePicker()
        picker.datePickerMode = .date
        picker.preferredDatePickerStyle = .inline
        picker.translatesAutoresizingMaskIntoConstraints = false
        picker.accessibilityIdentifier = "calendar"
        return picker
...
    }()
    
    var phoneNumberInput: CustomInput = {
        let input = CustomInput()
        input.keyboardType = .phonePad
        input.placeholder = "Type your phone number"
        input.accessibilityIdentifier = "phone-number-input"
        return input
    }()
    
    var user: User?
    
    override func viewDidLoad() {
...
        return label
    }()
    
    var firstNameInput: CustomInput = {
        let input = CustomInput()
        input.placeholder = "Type your first name"
        input.accessibilityIdentifier = "first-name-input"
        return input
    }()
    
    var lastNameInput: CustomInput = {
        let input = CustomInput()
        input.placeholder = "Type your last name"
        input.accessibilityIdentifier = "last-name-input"
        return input
    }()
    
    var emailInput: CustomInput = {
        let input = CustomInput()
        input.keyboardType = .emailAddress
        input.autocapitalizationType = .none
        input.placeholder = "Type your email"
        input.accessibilityIdentifier = "email-input"
        return input
    }()
    
    var passwordInput: CustomInput = {
        let input = CustomInput()
        input.isSecureTextEntry = true
        input.textContentType = .oneTimeCode
        input.placeholder = "Type your password"
        input.accessibilityIdentifier = "password-input"
        return input
    }()
    
    var stackView: UIStackView = {
        let view = UIStackView()
        view.axis = .vertical
...
