...
            .accessibilityIdentifier("continue-button")
            .disabled(!isCorrectPhoneNumber)
        }
        .toolbar {
            ToolbarItemGroup(placement: .keyboard) {
                Spacer()
                Button("Done") {
                    isInputActive = false
                }
            }
        }
        .navigationTitle("Your Phone Number")
    }
...
